--- a/src/containers/Home/Home.scss
+++ b/src/containers/Home/Home.scss
@@ -1,6 +1,5 @@
 .pg-home {
   height: 100%;
-  overflow-y: auto;
 
   .pg-custom-tabs {
     .c-tab-navigator__inner {
